# shelter-chat-api

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  NAVIGATOR_PROJECT_CONTEXT.md  flyway.conf  flyway.toml  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: cd.yml  ci.yml  deploy.yml
app/: main.py
app/agent/: graph.py  llm.py  runner.py  state.py
app/agent/nodes/: acknowledge.py  clarify.py  classify_groups.py  converse.py  format_results.py  geo_check.py  help.py  intake.py  refine_groups.py  resolve_intent.py  search_per_group.py  update_client_context.py
app/api/: chat.py  conversations.py  referrals.py  resume.py  saved_queries.py  saved_services.py  services.py
app/core/: auth.py  checkpointer.py  config.py  db.py  logging.py  mcp_client.py  metrics.py
app/guardrails/: node.py
app/guardrails/config/: config.yml  prompts.co
migrations/: V1__baseline.sql  V2__conversation_summaries.sql  V3__drop_group_count.sql  V4__saved_queries.sql  V6__referrals.sql  V7__saved_services.sql  V8__referral_change_tracking.sql
scripts/: chat.py  test_classify_groups.py  test_intake.py  test_multi_group.py  test_search.py
specs/: api-flows.md
tests/: test_chat.py
