[project]
name = "shelter-chat-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "nemoguardrails>=0.10.0",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
